{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 183,
  "lineage": "1c25b9c0-83d3-d242-0e9e-1dafd75b8854",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "dc-nic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-neth/providers/Microsoft.Network/networkInterfaces/win2k19-dc01-ni",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.40.0.4",
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-neth/providers/Microsoft.Network/virtualNetworks/harbakshsingh-vnet-neth/subnets/default-neth"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-23-6D-43",
            "name": "win2k19-dc01-ni",
            "network_security_group_id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-neth/providers/Microsoft.Network/networkSecurityGroups/WIn2k19-DC01-nsg",
            "private_ip_address": "10.40.0.4",
            "private_ip_addresses": [
              "10.40.0.4"
            ],
            "resource_group_name": "citrixrg-neth",
            "virtual_machine_id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-neth/providers/Microsoft.Compute/virtualMachines/WIn2k19-DC01"
          },
          "dependencies": [
            "azurerm_network_security_group.DC-nsg",
            "azurerm_resource_group.citrixrg-neth",
            "azurerm_subnet.default-neth",
            "azurerm_virtual_network.harbakshsingh-vnet-neth"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "domain-controller-nic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg/providers/Microsoft.Network/networkInterfaces/windows2016-ad578",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg/providers/Microsoft.Network/virtualNetworks/harbakshsingh-vnet/subnets/default"
              }
            ],
            "location": "uksouth",
            "mac_address": "00-22-48-3F-A5-E5",
            "name": "windows2016-ad578",
            "network_security_group_id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg/providers/Microsoft.Network/networkSecurityGroups/Windows2016-AD-nsg",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "citrixrg",
            "virtual_machine_id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg/providers/Microsoft.Compute/virtualMachines/Windows2016-AD"
          },
          "dependencies": [
            "azurerm_network_security_group.DomainController-nsg",
            "azurerm_resource_group.citrixrg",
            "azurerm_subnet.default",
            "azurerm_virtual_network.harbakshsingh-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mi-nic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-germany/providers/Microsoft.Network/networkInterfaces/win2k19-mi236",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.30.0.4",
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-germany/providers/Microsoft.Network/virtualNetworks/harbakshsingh-vnet-germany/subnets/default-germany"
              }
            ],
            "location": "germanywestcentral",
            "name": "win2k19-mi236",
            "network_security_group_id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-germany/providers/Microsoft.Network/networkSecurityGroups/Win2k19-MI-nsg",
            "private_ip_address": "10.30.0.4",
            "private_ip_addresses": [
              "10.30.0.4"
            ],
            "resource_group_name": "citrixrg-germany"
          },
          "dependencies": [
            "azurerm_network_security_group.MI-nsg",
            "azurerm_resource_group.citrixrg-germany",
            "azurerm_subnet.default-germany",
            "azurerm_virtual_network.harbakshsingh-vnet-germany"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ns-nic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-paris/providers/Microsoft.Network/networkInterfaces/netscaler-12.1-vpx489",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.20.0.4",
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-paris/providers/Microsoft.Network/virtualNetworks/harbakshsingh-vnet-paris/subnets/default-ireland"
              }
            ],
            "location": "francecentral",
            "mac_address": "00-0D-3A-89-B4-C5",
            "name": "netscaler-12.1-vpx489",
            "network_security_group_id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-paris/providers/Microsoft.Network/networkSecurityGroups/Netscaler-12.1-VPX-nsg",
            "private_ip_address": "10.20.0.4",
            "private_ip_addresses": [
              "10.20.0.4"
            ],
            "resource_group_name": "citrixrg-paris",
            "virtual_machine_id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-paris/providers/Microsoft.Compute/virtualMachines/Netscaler-12.1-VPX"
          },
          "dependencies": [
            "azurerm_network_security_group.Netscaler-nsg",
            "azurerm_resource_group.citrixrg-paris",
            "azurerm_subnet.default-paris"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "sf-nic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-ireland/providers/Microsoft.Network/networkInterfaces/win2k19-sf01768",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.10.0.5",
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-ireland/providers/Microsoft.Network/virtualNetworks/harbakshsingh-vnet-ireland/subnets/default-ireland"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-0D-3A-DB-12-3F",
            "name": "win2k19-sf01768",
            "network_security_group_id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-ireland/providers/Microsoft.Network/networkSecurityGroups/WIn2k19-SF01-nsg",
            "private_ip_address": "10.10.0.5",
            "private_ip_addresses": [
              "10.10.0.5"
            ],
            "resource_group_name": "citrixrg-ireland",
            "virtual_machine_id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-ireland/providers/Microsoft.Compute/virtualMachines/WIn2k19-SF01"
          },
          "dependencies": [
            "azurerm_network_security_group.SF-nsg",
            "azurerm_resource_group.citrixrg-ireland",
            "azurerm_subnet.default-ireland",
            "azurerm_virtual_network.harbakshsingh-vnet-ireland"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "DC-nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-neth/providers/Microsoft.Network/networkSecurityGroups/WIn2k19-DC01-nsg",
            "location": "westeurope",
            "name": "WIn2k19-DC01-nsg",
            "resource_group_name": "citrixrg-neth",
            "security_rule": [],
            "tags": {}
          },
          "dependencies": [
            "azurerm_resource_group.citrixrg-neth"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "DomainController-nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg/providers/Microsoft.Network/networkSecurityGroups/Windows2016-AD-nsg",
            "location": "uksouth",
            "name": "Windows2016-AD-nsg",
            "resource_group_name": "citrixrg",
            "security_rule": [],
            "tags": {}
          },
          "dependencies": [
            "azurerm_resource_group.citrixrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "MI-nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-germany/providers/Microsoft.Network/networkSecurityGroups/Win2k19-MI-nsg",
            "location": "germanywestcentral",
            "name": "Win2k19-MI-nsg",
            "resource_group_name": "citrixrg-germany",
            "security_rule": [],
            "tags": {}
          },
          "dependencies": [
            "azurerm_resource_group.citrixrg-germany"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "Netscaler-nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-paris/providers/Microsoft.Network/networkSecurityGroups/Netscaler-12.1-VPX-nsg",
            "location": "francecentral",
            "name": "Netscaler-12.1-VPX-nsg",
            "resource_group_name": "citrixrg-paris",
            "security_rule": [],
            "tags": {}
          },
          "dependencies": [
            "azurerm_resource_group.citrixrg-paris"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "SF-nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-ireland/providers/Microsoft.Network/networkSecurityGroups/WIn2k19-SF01-nsg",
            "location": "northeurope",
            "name": "WIn2k19-SF01-nsg",
            "resource_group_name": "citrixrg-ireland",
            "security_rule": [],
            "tags": {}
          },
          "dependencies": [
            "azurerm_resource_group.citrixrg-ireland"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "default",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg/providers/Microsoft.Network/virtualNetworks/harbakshsingh-vnet/subnets/default",
            "ip_configurations": [
              "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg/providers/Microsoft.Network/networkInterfaces/windows2016-ad578/ipConfigurations/ipconfig1"
            ],
            "name": "default",
            "resource_group_name": "citrixrg",
            "virtual_network_name": "harbakshsingh-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.citrixrg",
            "azurerm_virtual_network.harbakshsingh-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "default-germany",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.30.0.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-germany/providers/Microsoft.Network/virtualNetworks/harbakshsingh-vnet-germany/subnets/default-germany",
            "name": "default-germany",
            "resource_group_name": "citrixrg-germany",
            "virtual_network_name": "harbakshsingh-vnet-germany"
          },
          "dependencies": [
            "azurerm_resource_group.citrixrg-germany",
            "azurerm_virtual_network.harbakshsingh-vnet-germany"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "default-ireland",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.10.0.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-ireland/providers/Microsoft.Network/virtualNetworks/harbakshsingh-vnet-ireland/subnets/default-ireland",
            "ip_configurations": [
              "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-ireland/providers/Microsoft.Network/networkInterfaces/win2k19-sf01768/ipConfigurations/ipconfig1"
            ],
            "name": "default-ireland",
            "resource_group_name": "citrixrg-ireland",
            "virtual_network_name": "harbakshsingh-vnet-ireland"
          },
          "dependencies": [
            "azurerm_resource_group.citrixrg-ireland",
            "azurerm_virtual_network.harbakshsingh-vnet-ireland"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "default-neth",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.40.0.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-neth/providers/Microsoft.Network/virtualNetworks/harbakshsingh-vnet-neth/subnets/default-neth",
            "ip_configurations": [
              "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-neth/providers/Microsoft.Network/networkInterfaces/win2k19-dc01-ni/ipConfigurations/ipconfig1"
            ],
            "name": "default-neth",
            "resource_group_name": "citrixrg-neth",
            "virtual_network_name": "harbakshsingh-vnet-neth"
          },
          "dependencies": [
            "azurerm_resource_group.citrixrg-neth",
            "azurerm_virtual_network.harbakshsingh-vnet-neth"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "default-paris",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.20.0.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-paris/providers/Microsoft.Network/virtualNetworks/harbakshsingh-vnet-paris/subnets/default-ireland",
            "ip_configurations": [
              "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-paris/providers/Microsoft.Network/networkInterfaces/netscaler-12.1-vpx489/ipConfigurations/ipconfig1"
            ],
            "name": "default-ireland",
            "resource_group_name": "citrixrg-paris",
            "virtual_network_name": "harbakshsingh-vnet-paris"
          },
          "dependencies": [
            "azurerm_resource_group.citrixrg-paris",
            "azurerm_virtual_network.harbakshsingh-vnet-paris"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "harbakshsingh-vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/24",
              "192.168.1.0/24",
              "10.1.0.0/24"
            ],
            "id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg/providers/Microsoft.Network/virtualNetworks/harbakshsingh-vnet",
            "location": "uksouth",
            "name": "harbakshsingh-vnet",
            "resource_group_name": "citrixrg",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg/providers/Microsoft.Network/virtualNetworks/harbakshsingh-vnet/subnets/default",
                "name": "default"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.citrixrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "harbakshsingh-vnet-germany",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.30.0.0/24",
              "192.168.4.0/24",
              "10.31.0.0/24"
            ],
            "id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-germany/providers/Microsoft.Network/virtualNetworks/harbakshsingh-vnet-germany",
            "location": "germanywestcentral",
            "name": "harbakshsingh-vnet-germany",
            "resource_group_name": "citrixrg-germany"
          },
          "dependencies": [
            "azurerm_resource_group.citrixrg-germany"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "harbakshsingh-vnet-ireland",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/24",
              "192.168.2.0/24",
              "10.11.0.0/24"
            ],
            "id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-ireland/providers/Microsoft.Network/virtualNetworks/harbakshsingh-vnet-ireland",
            "location": "northeurope",
            "name": "harbakshsingh-vnet-ireland",
            "resource_group_name": "citrixrg-ireland",
            "subnet": [
              {
                "address_prefix": "10.10.0.0/24",
                "id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-ireland/providers/Microsoft.Network/virtualNetworks/harbakshsingh-vnet-ireland/subnets/default-ireland",
                "name": "default-ireland"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.citrixrg-ireland"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "harbakshsingh-vnet-neth",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.40.0.0/24",
              "192.168.5.0/24",
              "10.41.0.0/24"
            ],
            "id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-neth/providers/Microsoft.Network/virtualNetworks/harbakshsingh-vnet-neth",
            "location": "westeurope",
            "name": "harbakshsingh-vnet-neth",
            "resource_group_name": "citrixrg-neth",
            "subnet": [
              {
                "address_prefix": "10.40.0.0/24",
                "id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-neth/providers/Microsoft.Network/virtualNetworks/harbakshsingh-vnet-neth/subnets/default-neth",
                "name": "default-neth"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.citrixrg-neth"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "harbakshsingh-vnet-paris",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.20.0.0/24",
              "192.168.3.0/24",
              "10.21.0.0/24"
            ],
            "id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-paris/providers/Microsoft.Network/virtualNetworks/harbakshsingh-vnet-paris",
            "location": "francecentral",
            "name": "harbakshsingh-vnet-paris",
            "resource_group_name": "citrixrg-paris",
            "subnet": [
              {
                "address_prefix": "10.20.0.0/24",
                "id": "/subscriptions/029bae06-259d-4194-b4fe-1b32872ce776/resourceGroups/citrixrg-paris/providers/Microsoft.Network/virtualNetworks/harbakshsingh-vnet-paris/subnets/default-ireland",
                "name": "default-ireland"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.citrixrg-paris"
          ]
        }
      ]
    }
  ]
}